<resources>
    <string name="app_name">Homework3</string>
    <string name="loading_text">Loading...</string>

    <string name="try_again_button">Try again</string>
    <string name="try_again_internet_error">Some problems with internet</string>
    <string name="try_again_server_error">Some problems with server</string>

    <string name="login_login_textView">Login</string>
    <string name="login_password_textView">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register">Register</string>

    <string name="register_login_textView">Login</string>
    <string name="register_password_textView">Password</string>
    <string name="register_nickname_textView">Nickname</string>
    <string name="register_button">Register</string>

    <string name="exit_text">Нажмите назад ещё раз, чтобы выйти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_chat">Add chat</string>
    <string name="action_refresh_chat">Refresh</string>

</resources>
