<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/background_light"
             tools:context=".main_activity.fragments.LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_login_textView"
        android:id="@+id/login_login_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:layout_width="@dimen/editText_size"
        android:layout_height="wrap_content"
        android:id="@+id/login_login_editText"
        android:layout_below="@+id/login_login_textView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_password_textView"
        android:id="@+id/login_password_textView"
        android:layout_below="@+id/login_login_editText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="@dimen/editText_size"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password_editText"
        android:layout_below="@+id/login_password_textView"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@+id/login_password_editText"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:id="@+id/login_register"
        android:layout_below="@+id/login_error_textView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/login_error_textView"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
